--- a/web/src/styles/pages/Register.module.css
+++ b/web/src/styles/pages/Register.module.css
@@ -55,7 +55,7 @@
   width: 22.5rem;
   height: 4rem;
 
-  border: none;
+  border: transparent;
   border-radius: 5px;
 
   padding-left: 1.85rem;
@@ -65,6 +65,8 @@
   color: var(--white);
   background: linear-gradient(to right, #4953b8 0%, #4953b833 100%);
   outline: none;
+
+  transition: border 0.2s;
 }
 
 .inputContainer input::placeholder {
@@ -76,6 +78,46 @@
 }
 
 .inputContainer input:hover {
+  border: 1.75px #414aa3 solid;
+}
+
+.imageInput {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 22.5rem;
+  height: 4rem;
+}
+
+.imageInput > input {
+  visibility: hidden;
+  display: none;
+}
+
+.imageInput label {
+  height: 4rem;
+
+  border: transparent;
+  border-radius: 5px;
+
+  margin: 0.25rem 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  text-align: center;
+  font-size: 1.25rem;
+  color: var(--white);
+  background: linear-gradient(to right, #4953b8 0%, #4953b833 100%);
+  outline: none;
+
+  transition: border, transform 0.2s;
+}
+
+.imageInput label:hover {
+  transform: translateY(-3px);
   border: 1.75px #414aa3 solid;
 }
 
