--- a/web/src/styles/components/ValidationErrorModal.module.css
+++ b/web/src/styles/components/ValidationErrorModal.module.css
@@ -1,5 +1,5 @@
 .overlay {
-  background: rgba(245, 243, 245, 0.8);
+  background: #f5f3f511;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -22,26 +22,18 @@
   position: relative;
 }
 
-.container header {
-  font-size: 8.75rem;
-  font-weight: 600;
-  color: var(--blue);
-  background: url('/icons/levelup.svg') no-repeat center;
-  background-size: contain;
-  user-select: none;
-}
-
 .container strong {
-  font-size: 2.25rem;
-  color: var(--title);
-  user-select: none;
+  color: var(--red);
+  font-size: 1.5rem;
+  border-bottom: 1px solid var(--gray-line);
+  padding-bottom: 0.5rem;
 }
 
 .container p {
-  font-size: 1.25rem;
-  color: var(--text);
-  margin-top: 0.25rem;
-  user-select: none;
+  color: var(--title);
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 1rem;
 }
 
 .container button {
@@ -51,4 +43,8 @@
   background: transparent;
   border: 0;
   font-size: 0;
+}
+
+.container button img {
+  height: 2rem;
 }
