--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -3,6 +3,7 @@
   max-width: 992px;
   margin: 0 auto;
   padding: 2.5rem 2rem;
+  position: relative;
 
   display: flex;
   flex-direction: column;
