--- a/web/src/styles/components/ChallengeBox.module.css
+++ b/web/src/styles/components/ChallengeBox.module.css
@@ -4,7 +4,7 @@
   background: var(--white);
   border-radius: 5px;
   box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
-  padding: 1.5rem 2rem;
+  padding-top: 1.5rem;
 
   display: flex;
   flex-direction: column;
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 2rem;
 }
 
 .challengeNotActive strong {
@@ -50,6 +51,7 @@
   font-weight: 600;
   font-size: 1.25rem;
   padding: 0 2rem 1.5rem;
+  margin: 0 3rem;
   border-bottom: 1px solid var(--gray-line);
 }
 
@@ -59,6 +61,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0 2rem;
 }
 
 .challengeActive main strong {
@@ -73,37 +76,48 @@
 }
 
 .challengeActive footer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
+  display: flex;
+  height: 5rem;
+  width: 100%;
+
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .challengeActive footer button {
-  height: 3rem;
-
   display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
 
   border: 0;
-  border-radius: 5px;
-
-  color: var(--white);
+  border-top: 1px solid var(--gray-line);
 
   font-size: 1rem;
   font-weight: 600;
 
-  transition: filter 0.2s;
+  transition: background-color 0.2s, color 0.2s;
 }
 
 .challengeActive footer button.challengeFailedButton {
-  background: var(--red);
+  background: #FFF5F5;
+  color: var(--red);
+  border-right: 1px solid var(--gray-line);
+  border-bottom-left-radius: 5px;
 }
 
 .challengeActive footer button.challengeSucceededButton {
-  background: var(--green);
+  background: #F7FFF5;
+  color: var(--green);
+  border-bottom-right-radius: 5px;
 }
 
-.challengeActive footer button:hover {
-  filter: brightness(0.9);
+.challengeActive footer button.challengeFailedButton:hover {
+  background: var(--red);
+  color: var(--white);
+}
+
+.challengeActive footer button.challengeSucceededButton:hover {
+  background: var(--green);
+  color: var(--white);
 }
